[gd_scene load_steps=15 format=2]

[ext_resource path="res://gfx/ui_elements/button/button_highlight.png" type="Texture" id=1]
[ext_resource path="res://gfx/ui_elements/pause_screen/window.png" type="Texture" id=2]
[ext_resource path="res://gfx/ui_elements/button/button_pressed.png" type="Texture" id=3]
[ext_resource path="res://gfx/ui_elements/pause_screen/statue.png" type="Texture" id=4]
[ext_resource path="res://gfx/fonts/large_roman.tres" type="DynamicFont" id=5]
[ext_resource path="res://gfx/ui_elements/button/button_normal.png" type="Texture" id=6]
[ext_resource path="res://scenes/pause_menu/PauseMenu.gd" type="Script" id=7]
[ext_resource path="res://gfx/ui_elements/pause_screen/statue_alternate.png" type="Texture" id=8]
[ext_resource path="res://sfx/ui/button_rollover.wav" type="AudioStream" id=9]
[ext_resource path="res://sfx/ui/button_click.wav" type="AudioStream" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 794, 600 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 160, 54 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 160, 54 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 160, 54 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
statue = ExtResource( 4 )
alternate_statue = ExtResource( 8 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -397.0
margin_top = -300.0
margin_right = 397.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -141.0
margin_right = 340.0
margin_bottom = 229.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="HBoxContainer" parent="Panel/VBox"]
margin_right = 680.0
margin_bottom = 266.0

[node name="Statue" type="TextureRect" parent="Panel/VBox/Info"]
margin_right = 123.0
margin_bottom = 266.0
texture = ExtResource( 4 )

[node name="Mrg" type="MarginContainer" parent="Panel/VBox/Info"]
margin_left = 127.0
margin_right = 680.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBox/Info/Mrg"]
margin_left = 8.0
margin_top = 8.0
margin_right = 545.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 5 )
text = "SPQR v0.1

Build, expand, survive and rule as the Roman emperor from 200 B.C.E. to 600 C.E.

Programming & Design: Chris Handy 2021

"
scroll_active = false

[node name="Label" type="Label" parent="Panel/VBox"]
margin_top = 270.0
margin_right = 680.0
margin_bottom = 312.0
size_flags_vertical = 7

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
margin_top = 316.0
margin_right = 680.0
margin_bottom = 370.0
custom_constants/separation = 64
alignment = 2

[node name="OkButton" type="Button" parent="Panel/VBox/Buttons"]
margin_left = 520.0
margin_right = 680.0
margin_bottom = 54.0
rect_min_size = Vector2( 160, 54 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "OK"

[node name="Rollover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
pitch_scale = 0.5

[node name="MouseClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="mouse_entered" from="Panel/VBox/Buttons/OkButton" to="." method="_on_OkButton_mouse_entered"]
[connection signal="pressed" from="Panel/VBox/Buttons/OkButton" to="." method="_on_QuitButton_pressed"]
